# grape-agent

./: .gitignore  .gitmodules  CONTRIBUTING.md  CONTRIBUTING_CN.md  MANIFEST.in  README.md  README_CN.md  README_EN.md  pyproject.toml  任务完成总结.md  公司报告生成演示.md  智云科技_周报_2026W10.pptx  项目分析总结.md
.github/workflows/: build-binaries-nuitka.yml  build-binaries-pyinstaller.yml
browser_plugin/chrome-webterm-agent/: README.md  content_script.js  manifest.json  service_worker.js  sidepanel.html  sidepanel.js  styles.css
docs/: DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_CN.md  FEISHU_PLUGIN_IMPLEMENTATION_CN.md  README.md
docs/00-intro/: agent-core-concepts-cn.md  (+5 more)
examples/: 01_basic_tools.py  02_simple_agent.py  03_session_notes.py  04_full_agent.py  05_provider_selection.py  06_tool_schema_demo.py  README.md  README_CN.md
grape_agent/: cli.py  config.py  logger.py  runtime_factory.py  session_store.py
mini_agent/: __init__.py  agent.py  cli.py  config.py  runtime_factory.py  session_store.py
scripts/: setup-config.ps1  setup-config.sh
tests/: test_acp.py  test_agent.py  test_agent_memory_hook.py  test_agent_registry.py  test_bash_tool.py  test_channels_runtime.py  test_cli_user_id.py  test_config_cron.py  test_config_default_path.py  test_config_feishu.py  test_config_gateway.py  test_config_native_web_search.py  test_config_routing.py  test_config_ui.py  test_config_webterm_bridge.py  test_cron_core.py  test_feishu_bridge_routing.py  test_feishu_bridge_streaming.py  test_feishu_channel_plugin.py  test_feishu_message_utils.py  test_gateway_cron.py  test_gateway_router.py  test_integration.py  test_llm.py  test_llm_clients.py  test_llm_native_web_search.py  test_llm_provider_events.py  test_markdown_links.py  test_mcp.py  test_memos_client_cache.py  test_note_tool.py  test_routing_resolver.py  test_runtime_factory_memos.py  test_session_integration.py  test_session_store.py  test_sessions_tools.py  test_skill_loader.py  test_skill_tool.py  test_subagent_orchestrator.py  test_terminal_utils.py  (+6 more)
(+159 files in other folders)
